--- a/package.json
+++ b/package.json
@@ -43,8 +43,8 @@
         "css-loader": "^2.1.0",
         "file-loader": "^1.1.11",
         "html-webpack-plugin": "^3.2.0",
-        "sass": "^1.55.0",
-        "sass-loader": "^7.1.0",
+        "sass": "1.26.2",
+        "sass-loader": "^7.2.0",
         "uglifyjs-webpack-plugin": "^2.1.1",
         "vue-loader": "^15.7.0",
         "vue-template-compiler": "2.6.11",
